--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github demo</title>
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>
-    <h1>DEMO!</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, porro itaque voluptatibus quis repudiandae, explicabo pariatur corrupti magnam fugiat voluptas doloremque dolor doloribus natus quas rerum maxime quaerat eum facilis?</p>
-    
+    <svg viewBox="0 0 600 300">
+        <!-- Symbol-->
+        <symbol id="s-text">
+          <text text-anchor="middle" x="50%" y="50%" dy=".35em">GITHUB DEMO</text>
+        </symbol>
+        <!-- Duplicate symbols-->
+        <use class="text" xlink:href="#s-text"></use>
+        <use class="text" xlink:href="#s-text"></use>
+        <use class="text" xlink:href="#s-text"></use>
+        <use class="text" xlink:href="#s-text"></use>
+        <use class="text" xlink:href="#s-text"></use>
+      </svg>
 </body>
 </html>
